<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight = "8"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#d6e6ff">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_ac"
                    android:textSize="30dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_sign"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_percent"
                    android:textSize="35dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_division"
                    android:textSize="35dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_7"
                    android:layout_weight="1"
                    android:textSize="35dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_8"
                    android:textSize="35dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="9"
                    android:textSize="35dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_multiplication"
                    android:textSize="35dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_4"
                    android:layout_weight="1"
                    android:textSize="35dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_5"
                    android:textSize="35dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_6"
                    android:textSize="35dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_subtraction"
                    android:textSize="35dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_1"
                    android:layout_weight="1"
                    android:textSize="35dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_2"
                    android:textSize="35dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_3"
                    android:textSize="35dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_addition"
                    android:textSize="35dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_0"
                    android:layout_weight="1"
                    android:textSize="35dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_comma"
                    android:textSize="35dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_equal"
                    android:textSize="35dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>